added extra pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     </head>
 
     <body>
+  
+        <a href="history.html">History</a>
+        <a href="index.html"><img id="logo" src="images/logo.jpg" height="90"></a>
+        <a href="about.html">about</a>      
+        
         <h1>Corgis</h1>
         <p>
             <ul>
